@@ -67,6 +67,7 @@ ifeq (1, $(DEB_BUILD_PGO))
 	# See https://bugzilla.mozilla.org/show_bug.cgi?id=602245
 	DEB_WANT_UNIT_TESTS = 0
 	# We don't really want the crash reporter on for PGO builds yet
+	DEB_ENABLE_BREAKPAD = 0
 	DEB_BUILD_UNOFFICIAL = 1
 endif
 
@@ -114,6 +115,11 @@ DISTRIB 		:= $(shell lsb_release -i -s)
 ifneq (,$(filter $(DISTRIB),Ubuntu))
 	DISTRIB_VERSION_MAJOR := $(shell lsb_release -s -r | cut -d '.' -f 1)
 	DISTRIB_VERSION_MINOR := $(shell lsb_release -s -r | cut -d '.' -f 2)
+endif
+
+ifneq ($(DEBIAN_NAME),$(DEBIAN_APP_NAME))
+	# We don't want to make builds which change MOZ_APP_NAME official
+	DEB_BUILD_UNOFFICIAL = 1
 endif
 
 # minVersion and maxVersion used in install.rdf
@@ -194,6 +200,18 @@ endif
 endif
 endif
 
+ifneq (,$(findstring ~hg,$(DEBIAN_VERSION)))
+ifeq (1,$(shell test "$(DISTRIB_VERSION_MAJOR)$(DISTRIB_VERSION_MINOR)" -lt "1010" && echo "1"))
+	# Disable crashreporter on nightly builds older than Maverick
+	DEB_ENABLE_BREAKPAD = 0
+endif
+endif
+
+ifneq (,$(findstring ~mfn,$(DEBIAN_VERSION)))
+	# For now, disable crashreporter for the firefox-next PPA
+	DEB_ENABLE_BREAKPAD = 0
+endif
+
 CFLAGS		= -g
 CXXFLAGS	= -g
 
@@ -209,8 +227,11 @@ ifeq (1,$(shell test "$(DISTRIB_VERSION_MAJOR)$(DISTRIB_VERSION_MINOR)" -ge "110
 endif
 export MOZCONFIG=$(CURDIR)/debian/mozconfig
 ifneq (1,$(DEB_BUILD_UNOFFICIAL))
-	export MOZILLA_OFFICIAL=1
 	export BUILD_OFFICIAL=1
+endif
+ifeq (1,$(DEB_ENABLE_BREAKPAD))
+	# Needed to enable crashreported in application.ini
+	export MOZILLA_OFFICIAL=1
 endif
 ifeq (1,$(DEB_BUILD_PGO))
 	CC	= $(shell which gcc-4.5)
